# vehicular_cloud

./: .gitignore  CMakeLists.txt  README.md
client/: application.c
middleware/distribution/: midd4vc_client.c  midd4vc_client.h  midd4vc_job_codec.c  midd4vc_job_codec.h  midd4vc_protocol.h
middleware/infrastructure/: mqtt_adapter.c  mqtt_adapter.h
middleware/services/: midd4vc_data_management.c  midd4vc_data_management.h  midd4vc_scheduler.c  midd4vc_scheduler.h
middleware/specifics/: job_catalog.c  job_catalog.h
vehicle/: vehicle.c
